# poc_icu_comparison

./: .gitignore  Makefile  cabal.project  client.js  icu_string_comparison.c  package-lock.json  package.json  readme.md  readme.org
.github/workflows/: haskell.yml  makefile.yml  postgres.sql  postgres.yml
icu_haskell/: CHANGELOG.md  icu-haskell.cabal
icu_haskell/app/: Main.hs
sql/: test.sql
