cabal-version:      3.0
name:               icu-haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Haisheng W - M
maintainer:         h@test.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable icu-haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.17.1.0
                    , text >= 2.0
                    , text-icu >= 0.8
    hs-source-dirs:   app
    default-language: GHC2021
